--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Patrick's Blog
+title: Patrick Emami
 description: > # this means to ignore newlines until "baseurl:"
   Mainly reviews on articles concerning reinforcement learning and neural networks, 
   as well as the occasional tutorial. Enjoy!
