--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Patrick Emami
 description: > # this means to ignore newlines until "baseurl:"
-  Reviews on Machine Learning articles, investigations into various mathematical topics, and the occasional tutorial. Enjoy!
+  My summaries of Machine Learning papers, investigations into various mathematical and CS topics, and the occasional tutorial.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://pemami4911.github.io" # the base hostname & protocol for your site
