--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Patrick Emami
 description: > # this means to ignore newlines until "baseurl:"
-  My summaries of Machine Learning papers and investigations into various topics concerning artificial intelligence
+  Updates on my machine learning research, summaries of papers, and blog posts
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://pemami4911.github.io" # the base hostname & protocol for your site
+url: "https://pemami4911.github.io" # the base hostname & protocol for your site
 twitter_username: patrickomid
 github_username:  pemami4911
 
